--- a/src/pages/users/Users.css
+++ b/src/pages/users/Users.css
@@ -37,6 +37,12 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.users-empty {
+  padding: 80px 0;
+  text-align: center;
+  color: #4b5563;
+}
+
 .users-card__toolbar {
   display: flex;
   justify-content: space-between;
